# mavryk-protocol

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGES.rst  CODEOWNERS  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  accounts.json  accounts.yaml  build.Dockerfile  config.yaml  contributing.md  debian-deps-build.Dockerfile  default.nix  dune-project  kernels.mk  pyproject.toml  scenarios.json  shell.nix
.github/: README.md
_coverage_output/: README
ci/: README.md  makefile
contrib/: README.md
docs/: .gitignore  404.html  CHANGES.rst  Makefile  README.rst  _redirects  conf.py  index.rst
emacs/: README.md  michelson-mode.el
etherlink/: CHANGES.md  CHANGES_KERNEL.md  E2E_SCENARIOS.md
etherlink/kernel_evm/kernel/: Cargo.toml
etherlink/kernel_evm/kernel/src/: apply.rs  block.rs  block_in_progress.rs  blueprint.rs  blueprint_storage.rs  configuration.rs  delayed_inbox.rs  error.rs  event.rs  fallback_upgrade.rs  fees.rs  gas_price.rs  inbox.rs  indexable_storage.rs  internal_storage.rs  lib.rs  linked_list.rs  migration.rs  mock_internal.rs  parsing.rs  reveal_storage.rs  safe_storage.rs  sequencer_blueprint.rs  simulation.rs  stage_one.rs  storage.rs  tick_model.rs  upgrade.rs
etherlink/kernel_evm/kernel/tests/resources/: README.md  failed_migration.wasm
etherlink/kernel_evm/logging/: Cargo.toml
etherlink/kernel_evm/logging/src/: lib.rs
images/: README.md  create_client_libs_dependencies_image.sh  create_rust_toolchain_image.sh
irmin/: README.md
manifest/: Makefile  README.md  externals.ml  main.ml  manifest.ml  manifest.mli  mavryk_protocol.ml  product_client_libs.ml  product_etherlink.ml  product_mavkit.ml  product_mavkit.mli  product_tooling.ml
nix/: mavryk-opam-repo.nix  overlays.nix  sources.nix
opam/: bls12-381.opam  gitlab_ci.opam  internal-devtools.opam  internal-devtools_proto-context-du.opam  kaitai-of-data-encoding.opam  kaitai.opam  mavkit-accuser-PsParisC.opam  mavkit-accuser-PtAtLas.opam  mavkit-accuser-PtBoreas.opam  mavkit-accuser-PtParisB.opam  mavkit-accuser-alpha.opam  mavkit-alcotezt.opam  mavkit-baker-PsParisC.opam  mavkit-baker-PtAtLas.opam  mavkit-baker-PtBoreas.opam  mavkit-baker-PtParisB.opam  mavkit-baker-alpha.opam  mavkit-client.opam  mavkit-codec-kaitai.opam  mavkit-codec.opam  mavkit-crawler.opam  mavkit-dac-client.opam  mavkit-dac-node.opam  mavkit-dal-node.opam  mavkit-distributed-internal.opam  mavkit-distributed-lwt-internal.opam  mavkit-evm-node-libs.opam  mavkit-evm-node-tests.opam  mavkit-evm-node.opam  mavkit-injector-server.opam  mavkit-injector.opam  mavkit-internal-libs.opam  mavkit-l2-libs.opam  mavkit-libs.opam  mavkit-node-config.opam  mavkit-node.opam  mavkit-proto-libs.opam  mavkit-protocol-000-Ps9mPmXa-libs.opam  mavkit-protocol-000-PsUCFkqU-libs.opam  mavkit-protocol-001-PtAtLas-libs.opam  (+217 more)
script-inputs/: active_protocol_versions  active_protocol_versions_without_number  ci-opam-package-tests  (+5 more)
src/kernel_dal_echo/: Cargo.toml
src/kernel_dal_echo/kernel/: Cargo.toml
src/kernel_dal_echo/kernel/src/: lib.rs
src/kernel_sdk/constants/: Cargo.toml
src/kernel_sdk/constants/src/: riscv.rs
src/kernel_sdk/core/: Cargo.toml  README.md
src/kernel_sdk/core/src/: lib.rs  rollup_host.rs  smart_rollup_core.rs  syscalls.rs
src/kernel_sdk/entrypoint/: Cargo.toml  README.md
src/kernel_sdk/entrypoint/src/: host.rs  lib.rs
src/kernel_sdk/host/: Cargo.toml  README.md
src/kernel_sdk/host/src/: dal_parameters.rs  lib.rs  metadata.rs  path.rs  runtime.rs
src/kernel_sdk/installer-client/: Cargo.toml  README.md
src/kernel_sdk/installer-client/src/: config.rs  installer.rs  lib.rs  main.rs  preimages.rs
src/kernel_sdk/installer-client/tests/: installer_config.rs
src/kernel_sdk/installer-config/: Cargo.toml
src/kernel_sdk/installer-config/src/binary/: bin.rs  instr.rs  nom.rs  preimage.rs  size.rs
src/kernel_sdk/installer-config/src/yaml/: convert.rs
src/kernel_sdk/installer-kernel/: Cargo.toml
src/kernel_sdk/installer-kernel/src/: instr.rs  lib.rs
src/kernel_sdk/mock/: Cargo.toml  README.md
src/kernel_sdk/mock/src/: host.rs  lib.rs
src/kernel_sdk/mock/src/state/: in_memory_store.rs  mod.rs  store.rs
src/kernel_sdk/mock/tests/: dac.rs
src/kernel_sdk/panic-hook/: Cargo.toml  README.md
src/kernel_sdk/panic-hook/src/: lib.rs
src/kernel_sdk/sdk/: Cargo.toml  README.md
src/kernel_sdk/sdk/src/: lib.rs  outbox.rs
src/kernel_sdk/storage/: Cargo.toml  README.md
src/kernel_sdk/storage/src/: layer.rs  lib.rs  storage.rs
src/kernel_sequencer/: Cargo.toml
src/kernel_sequencer/examples/: sequenced_kernel.rs
src/kernel_sequencer/src/: crypto.rs  delayed_inbox.rs  lib.rs  message.rs  queue.rs  routing.rs  sequencer_macro.rs  sequencer_runtime.rs  state.rs  storage.rs
src/kernel_tx_demo/: Cargo.toml
src/kernel_tx_demo/kernel/: Cargo.toml
src/kernel_tx_demo/kernel/src/: dal.rs  lib.rs  storage.rs
src/kernel_tx_demo/kernel/src/inbox/: mod.rs  sendable.rs
src/kernel_tx_demo/kernel/src/transactions/: external_inbox.rs  process.rs  store.rs  utils.rs  withdrawal.rs
src/lib_protocol_compiler/test/: dune  rejections.sh
src/lib_time_measurement/: dune-project  mavryk-time-measurement.opam
src/lib_time_measurement/ppx/: dune  time_ppx.ml
src/lib_time_measurement/ppx/test/: README.md  dune
src/lib_time_measurement/ppx/test/invalid/: dune  dune.inc  gen_dune_rules.ml
src/lib_time_measurement/ppx/test/valid/: dune  dune.inc  gen_dune_rules.ml  test_addition_output.ml  test_benchmark_flow_output.ml  test_checkpoint_metadata_output.ml  test_flush_binding_output.ml  test_flush_identifier_output.ml  test_funapp_output.ml  test_lwt_addition_output.ml  test_metadata_variable_output.ml  test_pattern_matching_output.ml  test_preserve_attributes_output.ml  test_sub_expr_output.ml  test_try_output.ml
src/lib_time_measurement/runtime/: README.md  default.mli  dune  state.mli  time_measurement.mli
src/lib_webassembly_fast/: Cargo.toml  build.rs  dune  tezos_webassembly_fast.ml
src/lib_webassembly_fast/src/: lib.rs
src/risc_v/jstz/: Cargo.toml
src/risc_v/jstz/src/: main.rs
(+10340 files in other folders)
