(lang dune 3.7)
(formatting (enabled_for ocaml))
(cram enable)
(using ctypes 0.3)
(using menhir 2.1)
(package (name bls12-381))
(package (name internal-devtools))
(package (name kaitai))
(package (name kaitai-of-data-encoding))
(package (name mavkit-accuser-PtAtLas))
(package (name mavkit-accuser-alpha))
(package (name mavkit-alcotezt))
(package (name mavkit-baker-PtAtLas))
(package (name mavkit-baker-alpha))
(package (name mavkit-client))
(package (name mavkit-codec))
(package (name mavkit-codec-kaitai))
(package (name mavkit-crawler))
(package (name mavkit-dac-client))
(package (name mavkit-dac-node))
(package (name mavkit-dal-node))
(package (name mavkit-distributed-internal))
(package (name mavkit-distributed-lwt-internal))
(package (name mavkit-evm-node))
(package (name mavkit-evm-node-libs))
(package (name mavkit-evm-node-tests)(allow_empty))
(package (name mavkit-injector))
(package (name mavkit-injector-server))
(package (name mavkit-l2-libs))
(package (name mavkit-libs))
(package (name mavkit-node))
(package (name mavkit-node-config))
(package (name mavkit-proto-libs))
(package (name mavkit-protocol-000-Ps9mPmXa-libs))
(package (name mavkit-protocol-001-PtAtLas-libs))
(package (name mavkit-protocol-alpha-libs))
(package (name mavkit-protocol-compiler))
(package (name mavkit-proxy-server))
(package (name mavkit-risc-v-pvm))
(package (name mavkit-risc-v-pvm-test)(allow_empty))
(package (name mavkit-rpc-process))
(package (name mavkit-shell-libs))
(package (name mavkit-shell-tests)(allow_empty))
(package (name mavkit-signer))
(package (name mavkit-smart-rollup-client-PtAtLas))
(package (name mavkit-smart-rollup-client-alpha))
(package (name mavkit-smart-rollup-node))
(package (name mavkit-smart-rollup-node-PtAtLas)(allow_empty))
(package (name mavkit-smart-rollup-node-alpha)(allow_empty))
(package (name mavkit-smart-rollup-node-lib))
(package (name mavkit-smart-rollup-wasm-debugger))
(package (name mavkit-smart-rollup-wasm-debugger-lib))
(package (name mavkit-smart-rollup-wasm-debugger-plugin))
(package (name mavkit-snoop))
(package (name mavkit-store-tests)(allow_empty))
(package (name mavkit-testnet-scenarios))
(package (name mavkit-version))
(package (name octogram))
(package (name tezos-benchmark))
(package (name tezos-benchmark-001-PtAtLas))
(package (name tezos-benchmark-alpha))
(package (name tezos-benchmark-examples))
(package (name tezos-benchmark-tests)(allow_empty))
(package (name tezos-benchmark-type-inference-001-PtAtLas))
(package (name tezos-benchmark-type-inference-alpha))
(package (name tezos-benchmarks-proto-001-PtAtLas))
(package (name tezos-benchmarks-proto-alpha))
(package (name tezos-client-demo-counter))
(package (name tezos-client-genesis))
(package (name tezos-dac-client-lib))
(package (name tezos-dac-lib))
(package (name tezos-dac-lib-test)(allow_empty))
(package (name tezos-dac-node-lib)(allow_empty))
(package (name tezos-dac-node-lib-test)(allow_empty))
(package (name tezos-dal-node-lib))
(package (name tezos-dal-node-services))
(package (name tezos-injector-001-PtAtLas)(allow_empty))
(package (name tezos-injector-alpha)(allow_empty))
(package (name tezos-lazy-containers-tests)(allow_empty))
(package (name tezos-micheline-rewriting))
(package (name tezos-openapi))
(package (name tezos-protocol-000-Ps9mPmXa))
(package (name tezos-protocol-001-PtAtLas))
(package (name tezos-protocol-001-PtAtLas-tests)(allow_empty))
(package (name tezos-protocol-alpha))
(package (name tezos-protocol-alpha-tests)(allow_empty))
(package (name tezos-protocol-demo-counter))
(package (name tezos-protocol-demo-noops))
(package (name tezos-protocol-genesis))
(package (name tezos-proxy-server-config))
(package (name tezos-sc-rollup-node-test)(allow_empty))
(package (name tezos-scoru-wasm-regressions)(allow_empty))
(package (name tezos-smart-rollup-node-lib-test)(allow_empty))
(package (name tezos-tooling))
(package (name tezos-tps-evaluation))
(package (name tezos-tree-encoding-test)(allow_empty))
(package (name tezt-ethereum)(allow_empty))
(package (name tezt-risc-v-sandbox)(allow_empty))
(package (name tezt-tezos))
(package (name tezt-tx-kernel)(allow_empty))
; This file was automatically generated, do not edit.
; Edit file manifest/main.ml instead.
