(lang dune 3.7)
(formatting (enabled_for ocaml))
(cram enable)
(using ctypes 0.3)
(using menhir 2.1)
(package (name bls12-381))
(package (name gitlab_ci))
(package (name internal-devtools))
(package (name internal-devtools_proto-context-du))
(package (name kaitai))
(package (name kaitai-of-data-encoding))
(package (name mavkit-accuser-PtAtLas))
(package (name mavkit-accuser-PsParisC))
(package (name mavkit-accuser-alpha))
(package (name mavkit-alcotezt))
(package (name mavkit-baker-PtAtLas))
(package (name mavkit-baker-PsParisC))
(package (name mavkit-baker-alpha))
(package (name mavkit-client))
(package (name mavkit-codec))
(package (name mavkit-codec-kaitai))
(package (name mavkit-crawler))
(package (name mavkit-dac-client))
(package (name mavkit-dac-node))
(package (name mavkit-dal-node))
(package (name mavkit-distributed-internal))
(package (name mavkit-distributed-lwt-internal))
(package (name mavkit-evm-node))
(package (name mavkit-evm-node-libs))
(package (name mavkit-evm-node-tests)(allow_empty))
(package (name mavkit-injector))
(package (name mavkit-injector-server))
(package (name mavkit-internal-libs))
(package (name mavkit-l2-libs))
(package (name mavkit-libs))
(package (name mavkit-node))
(package (name mavkit-node-config))
(package (name mavkit-proto-libs))
(package (name mavkit-protocol-000-Ps9mPmXa-libs))
(package (name mavkit-protocol-001-PtAtLas-libs))
(package (name mavkit-protocol-020-PsParisC-libs))
(package (name mavkit-protocol-alpha-libs))
(package (name mavkit-protocol-compiler))
(package (name mavkit-proxy-server))
(package (name mavkit-risc-v-pvm))
(package (name mavkit-risc-v-pvm-test)(allow_empty))
(package (name mavkit-rpc-process))
(package (name mavkit-shell-libs))
(package (name mavkit-shell-tests)(allow_empty))
(package (name mavkit-signer))
(package (name mavkit-smart-rollup-node))
(package (name mavkit-smart-rollup-node-PtAtLas)(allow_empty))
(package (name mavkit-smart-rollup-node-PsParisC)(allow_empty))
(package (name mavkit-smart-rollup-node-alpha)(allow_empty))
(package (name mavkit-smart-rollup-node-lib))
(package (name mavkit-smart-rollup-wasm-debugger))
(package (name mavkit-smart-rollup-wasm-debugger-lib))
(package (name mavkit-smart-rollup-wasm-debugger-plugin))
(package (name mavkit-snoop))
(package (name mavkit-store-tests)(allow_empty))
(package (name mavkit-testnet-scenarios))
(package (name mavkit-version))
(package (name octogram))
(package (name mavryk-benchmark))
(package (name mavryk-benchmark-001-PtAtLas))
(package (name mavryk-benchmark-020-PsParisC))
(package (name mavryk-benchmark-alpha))
(package (name mavryk-benchmark-examples))
(package (name mavryk-benchmark-tests)(allow_empty))
(package (name mavryk-benchmark-type-inference-001-PtAtLas))
(package (name mavryk-benchmark-type-inference-020-PsParisC))
(package (name mavryk-benchmark-type-inference-alpha))
(package (name mavryk-benchmarks-proto-001-PtAtLas))
(package (name mavryk-benchmarks-proto-020-PsParisC))
(package (name mavryk-benchmarks-proto-alpha))
(package (name mavryk-client-demo-counter))
(package (name mavryk-client-genesis))
(package (name mavryk-dac-client-lib))
(package (name mavryk-dac-lib))
(package (name mavryk-dac-lib-test)(allow_empty))
(package (name mavryk-dac-node-lib)(allow_empty))
(package (name mavryk-dac-node-lib-test)(allow_empty))
(package (name mavryk-dal-node-lib))
(package (name mavryk-dal-node-services))
(package (name mavryk-injector-001-PtAtLas)(allow_empty))
(package (name mavryk-injector-020-PsParisC)(allow_empty))
(package (name mavryk-injector-alpha)(allow_empty))
(package (name mavryk-lazy-containers-tests)(allow_empty))
(package (name mavryk-micheline-rewriting))
(package (name mavryk-openapi))
(package (name mavryk-protocol-000-Ps9mPmXa))
(package (name mavryk-protocol-001-PtAtLas))
(package (name mavryk-protocol-001-PtAtLas-tests)(allow_empty))
(package (name mavryk-protocol-020-PsParisC))
(package (name mavryk-protocol-020-PsParisC-tests)(allow_empty))
(package (name mavryk-protocol-alpha))
(package (name mavryk-protocol-alpha-tests)(allow_empty))
(package (name mavryk-protocol-demo-counter))
(package (name mavryk-protocol-demo-noops))
(package (name mavryk-protocol-genesis))
(package (name mavryk-proxy-server-config))
(package (name mavryk-sc-rollup-node-test)(allow_empty))
(package (name mavryk-scoru-wasm-regressions)(allow_empty))
(package (name mavryk-smart-rollup-node-lib-test)(allow_empty))
(package (name mavryk-tooling))
(package (name mavryk-tps-evaluation))
(package (name mavryk-tree-encoding-test)(allow_empty))
(package (name mavryk_internal_irmin_tests)(allow_empty))
(package (name tezt-etherlink)(allow_empty))
(package (name tezt-risc-v-sandbox)(allow_empty))
(package (name tezt-mavryk))
(package (name tezt-tx-kernel)(allow_empty))
; This file was automatically generated, do not edit.
; Edit file manifest/main.ml instead.
