# SPDX-FileCopyrightText: 2023 Marigold <contact@marigold.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "kernel-sequencer"
version = "0.1.0"
edition = "2021"
description = "Sequencer framework for Tezos Smart Rollups"

[dependencies.tezos-smart-rollup-core]
path = "../kernel_sdk/core"
version = "0.1.0"
default-features = false

[dependencies.tezos-smart-rollup-host]
path = "../kernel_sdk/host"
version = "0.1.0"

[dev-dependencies.tezos-smart-rollup-mock]
path = "../kernel_sdk/mock"
version = "0.1.0"

[dependencies.tezos_crypto_rs]
version = "0.5.0"
default-features = false

[dependencies.serde]
version = "1.0.162"
features = ["derive"]

[dependencies.bincode]
version = "1.3.3"

[dev-dependencies.tezos-smart-rollup-encoding]
path = "../kernel_sdk/encoding"
version = "0.1.0"

