# SPDX-FileCopyrightText: 2023 Nomadic Labs <contact@nomadic-labs.com>
# SPDX-FileCopyrightText: 2023 Marigold <contact@marigold.dev>
#
# SPDX-License-Identifier: MIT

[workspace]

members = [
  "kernel",
  "collector",
]

[workspace.dependencies]
mavryk-smart-rollup-core = { path = "../kernel_sdk/core" }
mavryk-smart-rollup-host = { path = "../kernel_sdk/host" }
mavryk-smart-rollup-debug = { path = "../kernel_sdk/debug" }
mavryk-smart-rollup-entrypoint = { path = "../kernel_sdk/entrypoint" }
mavryk-smart-rollup-storage = { path = "../kernel_sdk/storage" }
mavryk-smart-rollup-encoding = { path = "../kernel_sdk/encoding" }
mavryk-smart-rollup-mock = { path = "../kernel_sdk/mock" }
