(lang dune 3.0)
(formatting (enabled_for ocaml))
(name mavryk-time-measurement)

(maintainers contact@tezos.com)
(authors "Tezos devteam")
(homepage https://www.tezos.com/)
(bug_reports https://gitlab.com/tezos/tezos/issues)
(source (uri git+https://gitlab.com/mavryk-network/mavryk-protocol.git))
(license MIT)

(generate_opam_files true)

(package
  (name mavryk-time-measurement)
  (synopsis "Tezos time measurement tooling")
  (depends
    (ppxlib (>= 0.22.2))
    (data-encoding (>= 0.4))
    (lwt (>= 5.4.2))
    (mavryk-event-logging :dev)
  )
)