(lang dune 3.0)
(formatting (enabled_for ocaml))
(name mavryk-time-measurement)

(maintainers info@mavryk.io)
(authors "Mavryk Dynamics")
(homepage https://mavrykdynamics.com/)
(bug_reports https://gitlab.com/mavryk-network/mavryk-protocol/issues)
(source (uri git+https://gitlab.com/mavryk-network/mavryk-protocol.git))
(license MIT)

(generate_opam_files true)

(package
  (name mavryk-time-measurement)
  (synopsis "Mavryk time measurement tooling")
  (depends
    (ppxlib (>= 0.22.2))
    (data-encoding (>= 0.4))
    (lwt (>= 5.4.2))
    (mavryk-event-logging :dev)
  )
)