[package]
name = "tezos-webassembly-fast"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies.wasmer]
version = "3.3.0"
features = ["singlepass", "cranelift"]

[dependencies.wasmer-types]
version = "*"

[dependencies.ocaml]
version = "0.22.4"
features = ["derive"]

[build-dependencies]
cbindgen = "*"
