# SPDX-FileCopyrightText: 2023 Nomadic Labs <contact@nomadic-labs.com>
# SPDX-FileCopyrightText: 2023 TriliTech <contact@trili.tech>
# SPDX-FileCopyrightText: 2023 Functori <contact@functori.com>
# SPDX-FileCopyrightText: 2023 Marigold <contact@marigold.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = 'evm_kernel'
version = '0.1.0'
edition = '2021'
build = "build.rs"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true

primitive-types.workspace = true
num-traits.workspace = true

rlp.workspace = true
hex.workspace = true

sha3.workspace = true
libsecp256k1.workspace = true
mavryk_crypto_rs.workspace = true

ethereum.workspace = true
ethbloom.workspace = true

evm.workspace = true
evm-execution.workspace = true
mavryk_ethereum.workspace = true
mavryk-evm-logging.workspace = true

mavryk-smart-rollup-core.workspace = true
mavryk-smart-rollup-host.workspace = true
mavryk-smart-rollup-entrypoint.workspace = true
mavryk-smart-rollup-debug.workspace = true
mavryk-smart-rollup-encoding.workspace = true
mavryk-smart-rollup-installer-config.workspace = true
mavryk-smart-rollup-storage.workspace = true

mavryk_data_encoding.workspace = true

[dev-dependencies]
mavryk-smart-rollup-mock.workspace = true
mavryk-smart-rollup-panic-hook.workspace = true

[features]
default = ["panic-hook"]
panic-hook = []
debug = ["mavryk-evm-logging/debug"]
