# SPDX-FileCopyrightText: 2023 Nomadic Labs <contact@nomadic-labs.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "mavryk-evm-logging"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
mavryk-smart-rollup-debug.workspace = true

[features]
default = ["alloc"]
alloc = []
debug = []
