# SPDX-FileCopyrightText: 2022-2023 TriliTech <contact@trili.tech>
#
# SPDX-License-Identifier: MIT

[package]
name = "dal_echo_kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mavryk-smart-rollup-core.workspace = true
mavryk-smart-rollup-host.workspace = true
mavryk-smart-rollup-debug.workspace = true
mavryk-smart-rollup-entrypoint.workspace = true
mavryk-smart-rollup-storage.workspace = true
mavryk-smart-rollup-encoding.workspace = true
mavryk-smart-rollup-mock.workspace = true

[features]
default = []
testing = []
