# SPDX-FileCopyrightText: 2022-2024 TriliTech <contact@trili.tech>
# SPDX-FileCopyrightText: 2023 Marigold <contact@marigold.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "mavryk-smart-rollup-core"
edition = "2021"
version = "0.2.2"
license = "MIT"
authors = [
    "TriliTech <contact@trili.tech>",
    "Mavryk Dynamics <info@mavryk.io>"
]
repository = "https://gitlab.com/mavryk-network/mavryk-protocol.git"
description = "Low-level host function definitions & constants for Mavryk Smart Rollups."
keywords = ["mavryk", "smart", "rollup"]
categories = ["no-std", "no-std::no-alloc", "api-bindings", "wasm"]

[lib]
path = "src/lib.rs"

[dependencies.mockall]
version = "0.11.0"
optional = true

[target.'cfg(target_arch = "riscv64")'.dependencies.mavryk-smart-rollup-constants]
path = "../constants"

[features]
"testing" = ["mockall"]
"proto-nairobi" = []
"proto-alpha" = []
