# SPDX-FileCopyrightText: 2022-2023 TriliTech <contact@trili.tech>
# SPDX-FileCopyrightText: 2023 Nomadic Labs <contact@nomadic-labs.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "mavryk-smart-rollup-entrypoint"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = [
    "TriliTech <contact@trili.tech>",
    "Mavryk Dynamics <info@mavryk.io>"
]
repository = "https://gitlab.com/mavryk-network/mavryk-protocol.git"
description = "Setup kernel_entry entrypoint for Mavryk Smart Rollup kernels."
keywords = ["tezos", "smart", "rollup"]
categories = ["no-std", "no-std::no-alloc", "api-bindings", "wasm"]

[lib]
crate-type = ["rlib"]

[target.'cfg(not(target_arch = "riscv64"))'.dependencies.dlmalloc]
version = "0.2.3"
features = ["global"]
optional = true

[dependencies.mavryk-smart-rollup-core]
path = "../core"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-panic-hook]
path = "../panic-hook"
version = "0.2.2"
default-features = false
optional = true

[dependencies.mavryk-smart-rollup-host]
path = "../host"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-debug]
path = "../debug"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-mock]
path = "../mock"
version = "0.2.2"
default-features = false
optional = true
features = ["proto-alpha"]

[features]
default = ["std", "alloc", "dlmalloc", "panic-hook-debug", "panic-hook-abort", "panic-hook"]
std = ["mavryk-smart-rollup-panic-hook/std", "mavryk-smart-rollup-host/std"]
alloc = []
panic-hook = ["mavryk-smart-rollup-panic-hook"]
panic-hook-debug = ["panic-hook", "mavryk-smart-rollup-panic-hook/debug", "mavryk-smart-rollup-debug/default"]
panic-hook-abort = ["panic-hook", "mavryk-smart-rollup-panic-hook/abort"]
testing = []
proto-alpha = ["mavryk-smart-rollup-core/proto-alpha", "mavryk-smart-rollup-host/proto-alpha", "mavryk-smart-rollup-debug/proto-alpha"]
experimental-host-in-memory-store = ["mavryk-smart-rollup-mock"]
