# SPDX-FileCopyrightText: 2023 TriliTech <contact@trili.tech>
#
# SPDX-License-Identifier: MIT

[package]
name = "mavryk-smart-rollup-installer"
version = "0.2.2"
edition = "2021"
authors = [
    "TriliTech <contact@trili.tech>",
    "Mavryk Dynamics <info@mavryk.io>"
]
include = ["src/", "installer.wasm", "README.md"]
license = "MIT"
repository = "https://gitlab.com/mavryk-network/mavryk-protocol.git"
description = "Installer client for Mavryk Smart Rollups."
keywords = ["mavryk", "smart", "rollup", "installer"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "smart-rollup-installer"
path = "src/main.rs"

[dependencies.mavryk-smart-rollup-encoding]
path = "../encoding"
version = "0.2.2"
default-features = false

[dependencies.clap]
version = "4.1"
features = ["derive"]

[dependencies.hex]
version = "0.4"

[dependencies.thiserror]
version = "1.0"

[dependencies.wasm-gen]
version = "0.1.4"

[dependencies.mavryk-smart-rollup-installer-config]
path = "../installer-config"
version = "0.2.2"

[dependencies.mavryk_data_encoding]
version = "=0.5.2"

[dependencies.mavryk-smart-rollup-host]
path = "../host"
version = "0.2.2"

[dependencies.serde_yaml]
version = "0.9"

# For tests
[dev-dependencies]
installer-kernel = { path = "../installer-kernel", default-features = false }
mavryk-smart-rollup = { path = "../sdk", features = ["proto-nairobi"], default-features = false }
mavryk-smart-rollup-mock = { path = "../mock", features = ["proto-nairobi"] }
