# SPDX-FileCopyrightText: 2023 TriliTech <contact@trili.tech>
#
# SPDX-License-Identifier: MIT

[package]
name = "mavryk-smart-rollup-installer-config"
version = "0.2.2"
edition = "2021"
authors = ["TriliTech <contact@trili.tech>"]
license = "MIT"
repository = "https://gitlab.com/tezos/tezos.git"
description = "Installer configuration for installer kernel of Tezos Smart Rollups."
keywords = ["tezos", "smart", "rollup", "installer", "config"]
categories = [
    "development-tools",
    "parser-implementations",
    "config",
    "no-std::no-alloc",
]

[dependencies.mavryk-smart-rollup-host]
path = "../host"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-core]
path = "../core"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-encoding]
path = "../encoding"
version = "0.2.2"
default-features = false

[dependencies.nom]
version = "7.1"
default-features = false

[dependencies.mavryk_data_encoding]
version = "=0.5.2"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.serde_yaml]
version = "0.9"
optional = true

[dependencies.hex]
version = "0.4.3"
optional = true

[dependencies.mavryk_crypto_rs]
version = "=0.5.2"
default-features = false
optional = true

[dependencies.thiserror]
version = "1.0"
optional = true

[dev-dependencies.mavryk-smart-rollup-mock]
path = "../mock"
version = "0.2.2"

[features]
default = ["std"]
std = ["alloc"]
alloc = [
    "mavryk_data_encoding",
    "mavryk-smart-rollup-host/alloc",
    "mavryk-smart-rollup-encoding/alloc",
    "mavryk-smart-rollup-encoding/mavryk-encoding",
    "serde",
    "serde_yaml",
    "hex",
    "mavryk_crypto_rs",
    "thiserror",
]
testing = []
