# SPDX-FileCopyrightText: 2023 TriliTech <contact@trili.tech>
#
# SPDX-License-Identifier: MIT

[package]
name = "installer-kernel"
version = "0.2.2"
edition = "2021"
authors = [
    "TriliTech <contact@trili.tech>",
    "Mavryk Dynamics <info@mavryk.io>"
]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["std"]
std = []
entrypoint = []

[dependencies.mavryk-smart-rollup]
path = "../sdk"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-installer-config]
path = "../installer-config"
version = "0.2.2"
default-features = false
