# SPDX-FileCopyrightText: 2022-2023 TriliTech <contact@trili.tech>
#
# SPDX-License-Identifier: MIT

[package]
name = "mavryk-smart-rollup-mock"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = [
    "TriliTech <contact@trili.tech>",
    "Mavryk Dynamics <info@mavryk.io>"
]
repository = "https://gitlab.com/mavryk-network/mavryk-protocol.git"
description = "Mock implementation of Mavryk Smart Rollup host functions to enable unit testing of kernel logic."
keywords = ["tezos", "smart", "rollup"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
hex = "0.4"
mavryk_crypto_rs = { version = "=0.5.2", default-features = false }
mavryk_data_encoding = "=0.5.2"

[dependencies.mavryk-smart-rollup-encoding]
path = "../encoding"
version = "0.2.2"
default-features = false
features = ["alloc", "mavryk-encoding", "crypto"]

[dependencies.mavryk-smart-rollup-core]
path = "../core"
version = "0.2.2"

[dependencies.mavryk-smart-rollup-host]
path = "../host"
version = "0.2.2"

[dev-dependencies.mavryk-smart-rollup-host]
path = "../host"
version = "0.2.2"
features = ["default"]

[features]
proto-nairobi = ["mavryk-smart-rollup-core/proto-nairobi", "mavryk-smart-rollup-host/proto-nairobi"]
proto-alpha = ["mavryk-smart-rollup-core/proto-alpha", "mavryk-smart-rollup-host/proto-alpha"]
