# SPDX-FileCopyrightText: 2022-2023 TriliTech <contact@trili.tech>
# SPDX-FileCopyrightText: 2023 Marigold <contact@marigold.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "mavryk-smart-rollup-panic-hook"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = [
    "TriliTech <contact@trili.tech>",
    "Mavryk Dynamics <info@mavryk.io>"
]
repository = "https://gitlab.com/mavryk-network/mavryk-protocol.git"
description = "Hook for capturing kernel panics & printing to debug log."
keywords = ["tezos", "smart", "rollup"]
categories = ["no-std", "no-std::no-alloc", "api-bindings", "wasm"]

[dependencies.mavryk-smart-rollup-core]
path = "../core"
version = "0.2.2"

[features]
default = ["abort", "debug", "std"]
abort = ["std"]
debug = []
std = []
proto-alpha=["mavryk-smart-rollup-core/proto-alpha"]
