# SPDX-FileCopyrightText: 2022-2023 TriliTech <contact@trili.tech>
#
# SPDX-License-Identifier: MIT

[package]
name = "mavryk-smart-rollup"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = [
    "TriliTech <contact@trili.tech>",
    "Mavryk Dynamics <info@mavryk.io>"
]
repository = "https://gitlab.com/mavryk-network/mavryk-protocol.git"
description = "SDK for Mavryk Smart Rollup kernel development."
keywords = ["mavryk", "smart", "rollup"]
categories = ["wasm", "encoding", "development-tools"]

[package.metadata.docs.rs]
features = ["testing"]

[dependencies]
hex = { version = "0.4", default-features = false}

[dependencies.mavryk-smart-rollup-core]
path = "../core"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-host]
path = "../host"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-debug]
path = "../debug"
version = "0.2.2"

[dependencies.mavryk-smart-rollup-encoding]
path = "../encoding"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-storage]
path = "../storage"
version = "0.2.2"
optional = true

[dependencies.mavryk-smart-rollup-entrypoint]
path = "../entrypoint"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-mock]
path = "../mock"
version = "0.2.2"
optional = true

[dependencies.mavryk_crypto_rs]
version = "=0.5.2"
default-features = false
optional = true

[dependencies.mavryk_data_encoding]
version = "=0.5.2"
optional = true

[features]
default = ["std", "crypto", "dlmalloc", "panic-hook", "data-encoding", "storage", "bls", "testing"]
crypto = ["mavryk_crypto_rs"]
bls = ["mavryk-smart-rollup-encoding/bls"]
debug_alloc = ["mavryk-smart-rollup-debug/alloc"]
alloc = ["mavryk-smart-rollup-entrypoint/alloc"]
dlmalloc = ["mavryk-smart-rollup-entrypoint/dlmalloc"]
panic-hook = ["mavryk-smart-rollup-entrypoint/default"]
data-encoding = ["mavryk_data_encoding", "mavryk-smart-rollup-encoding/alloc", "mavryk-smart-rollup-encoding/mavryk-encoding", "mavryk-smart-rollup-encoding/crypto"]
storage = ["mavryk-smart-rollup-storage"]
std = ["alloc", "debug_alloc", "mavryk-smart-rollup-entrypoint/std"]
testing = ["crypto", "mavryk-smart-rollup-mock"]
proto-nairobi = ["mavryk-smart-rollup-core/proto-nairobi", "mavryk-smart-rollup-host/proto-nairobi", "mavryk-smart-rollup-mock/proto-nairobi"]
proto-alpha = ["mavryk-smart-rollup-core/proto-alpha", "mavryk-smart-rollup-host/proto-alpha", "mavryk-smart-rollup-mock/proto-alpha"]
experimental-host-in-memory-store = ["mavryk-smart-rollup-entrypoint/proto-alpha", "mavryk-smart-rollup-entrypoint/experimental-host-in-memory-store"]
