# SPDX-FileCopyrightText: 2022-2023 TriliTech <contact@trili.tech>
# SPDX-FileCopyrightText: 2023 Marigold <contact@marigold.dev
#
# SPDX-License-Identifier: MIT

[package]
name = "mavryk-smart-rollup-storage"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["TriliTech <contact@trili.tech>"]
repository = "https://gitlab.com/tezos/tezos.git"
description = "Higher-level transactional account view over Tezos Smart Rollup durable storage."
keywords = ["tezos", "smart", "rollup"]
categories = ["database", "wasm"]

[dependencies]
thiserror = "1.0"

[dependencies.mavryk-smart-rollup-core]
path = "../core"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-host]
path = "../host"
version = "0.2.2"
default-features = false

[dependencies.mavryk-smart-rollup-debug]
path = "../debug"
version = "0.2.2"

[dependencies.mavryk-smart-rollup-encoding]
path = "../encoding"
version = "0.2.2"
default-features = false
features = ["alloc", "mavryk-encoding", "crypto"]

[dev-dependencies.mavryk-smart-rollup-core]
path = "../core"
version = "0.2.2"
features = ["testing"]

[dev-dependencies.mavryk-smart-rollup-mock]
path = "../mock"
version = "0.2.2"

[features]
default = ["mavryk-smart-rollup-host/default"]
