(rule
  (alias runtest_rejections)
  (deps (package mavryk-protocol-demo-noops))
  (action
    (run
       bash
         %{dep:rejections.sh}
         %{bin:mavkit-protocol-compiler}
         %{lib:mavryk-protocol-demo-noops.protocol:raw/MAVRYK_PROTOCOL}
       )))

(rule
 (alias runtest_out_of_opam)
 (deps
   (alias runtest_rejections))
 (action (progn)))
