(library
 (name mavryk_time_measurement_runtime)
 (public_name mavryk-time-measurement)
 (libraries unix
            data-encoding
            mavkit-libs.event-logging
            lwt)
 (instrumentation.backend (ppx mavryk-time-measurement.ppx))
 (flags (:standard
          -open Mavryk_event_logging
          -open Data_encoding
          -open Lwt)))
