[package]
name = "jstz"
version = "0.0.0"
edition = "2021"

[patch.crates-io]
mavryk-smart-rollup = { path = "../../kernel_sdk/sdk" }
mavryk-smart-rollup-host = { path = "../../kernel_sdk/host" }
mavryk-smart-rollup-core = { path = "../../kernel_sdk/core" }
mavryk-smart-rollup-mock = { path = "../../kernel_sdk/mock" }
mavryk-smart-rollup-encoding = { path = "../../kernel_sdk/encoding" }
mavryk-smart-rollup-entrypoint = { path = "../../kernel_sdk/entrypoint" }
mavryk-smart-rollup-debug = { path = "../../kernel_sdk/debug" }
mavryk-smart-rollup-panic-hook = { path = "../../kernel_sdk/panic-hook" }
mavryk-smart-rollup-storage = { path = "../../kernel_sdk/storage" }
# Patches from the jstz repo are dropped, copying them here
boa_ast = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_engine = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_gc = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_interner = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_macros = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_parser = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_profiler = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }

[dependencies.mavryk-smart-rollup]
version = "0.2.2"
default-features = false
features = [
  "std",
  "crypto",
  "panic-hook",
  "data-encoding",
  "proto-alpha",
  "experimental-host-in-memory-store",
]

[dependencies.jstz_kernel]
git = "https://github.com/trilitech/jstz.git"
rev = "3b04f3226e8feebd1ea44cf11d11e018c8e8df5e"
