
(env (_ (env-vars (OCAML_COLOR "never"))))

(executable
 (name pp)
 (modules pp)
 (libraries mavryk-time-measurement.ppx ppxlib))

(executable
 (name gen_dune_rules)
 (modules gen_dune_rules)
 (libraries mavryk_time_measurement_ppx_test)
 (flags (:standard -open Mavryk_time_measurement_ppx_test)))

(rule
 (targets dune.inc.gen)
 (deps
  (:gen gen_dune_rules.exe)
  (source_tree .))
 (action
  (with-stdout-to
    %{targets}
   (run %{gen}))))

(include dune.inc)

(rule
 (alias runtest)
 (package mavryk-time-measurement)
 (action (diff dune.inc dune.inc.gen)))
