(executable
 (name pp)
 (modules pp)
 (libraries mavryk-time-measurement.ppx ppxlib))

(executables
 (names gen_dune_rules gen_ocamlformat_ignore)
 (modules gen_dune_rules gen_ocamlformat_ignore)
 (libraries mavryk_time_measurement_ppx_test)
 (flags (:standard -open Mavryk_time_measurement_ppx_test)))

(rule
 (targets dune.inc.gen)
 (deps
  (:gen gen_dune_rules.exe)
  (glob_files *.ml)
  (glob_files *.mli))
 (action
  (with-stdout-to
    %{targets}
   (run %{gen}))))

(rule
 (targets .ocamlformat-ignore)
 (deps
  (:gen gen_ocamlformat_ignore.exe)
  (glob_files *.ml)
  (glob_files *.mli))
 (mode (promote (until-clean)))
 (action
  (with-stdout-to
    %{targets}
   (run %{gen}))))

(include dune.inc)

(rule
 (alias runtest)
 (package mavryk-time-measurement)
 (action (diff dune.inc dune.inc.gen)))

